Revert "Fix dashboard-feature"

--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -22,20 +22,7 @@
 // 텍스트 관련 스타일 모듈
 @import "./modules/text.scss";
 
-// 음수 마진 - 요소를 위로 120px 이동 (강제 적용)
-:not(.admin-page):not(.admin-view):not(.admin-dashboard) .mt-_120 {
-  margin-top: -120px !important;
-}
-
-// 관리자 전용 스타일 모듈 (항상 마지막에 임포트하여 우선순위 확보)
-@import "./modules/admin.scss";
-
-// 일반 디바이스에만 적용되는 전역 스타일
-body:not(.admin-view) {
-  // 관리자 페이지에서는 적용되지 않는 스타일 정의
-}
-
-// 어드민 경로를 제외한 스타일 적용
-:not([class*="admin"]) {
-  // 이곳에 admin 경로에 적용하지 않을 스타일 추가
+// 음수 마진 - 요소를 위로 120px 이동
+.mt-_120 {
+  margin-top: -120px;
 }
